tests/baselines/reference/booleanCoercion1.errors.txt
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(57,9): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(60,9): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(63,9): error TS4111: The type 'true' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(66,9): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(75,9): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(76,9): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(77,9): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(78,9): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(79,9): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(80,9): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(81,9): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(82,9): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(90,12): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(93,12): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(99,12): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(108,12): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(109,12): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(110,12): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(111,12): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(112,12): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(113,12): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(114,12): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(115,12): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(123,19): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(126,19): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(132,19): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(141,19): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(142,18): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(143,18): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(144,18): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(145,18): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(146,18): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(147,18): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(148,18): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(158,12): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(161,12): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(167,12): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(176,12): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(177,11): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(178,11): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(179,11): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(180,11): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(181,11): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(182,11): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(183,11): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(193,5): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(196,5): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(199,5): error TS4111: The type 'true' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(202,5): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(211,5): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(212,5): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(213,5): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(214,5): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(215,5): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(216,5): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(217,5): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(218,5): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(226,5): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(229,5): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(232,5): error TS4111: The type 'true' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(235,5): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(244,5): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(245,5): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(246,5): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(247,5): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(248,5): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(249,5): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(250,5): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(251,5): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(259,5): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(262,5): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(265,5): error TS4111: The type 'true' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(268,5): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(277,5): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(278,5): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(279,5): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(280,5): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(281,5): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(282,5): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(283,5): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(284,5): error TS4111: The type 'Type & Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(294,6): error TS4111: The type '"123"' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(297,6): error TS4111: The type '123' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(300,6): error TS4111: The type 'true' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(303,6): error TS4111: The type '123n' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(312,6): error TS4111: The type '() => void' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(313,6): error TS4111: The type 'Interface' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(314,6): error TS4111: The type 'Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(315,6): error TS4111: The type 'Symbol' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(316,6): error TS4111: The type 'string[]' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(317,6): error TS4111: The type 'Class' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(318,6): error TS4111: The type 'Interface | Type' is disallowed in truthiness position
tests/cases/conformance/booleanCoercion/booleanCoercion1.ts(319,6): error TS4111: The type 'Type & Interface' is disallowed in truthiness position


==== tests/cases/conformance/booleanCoercion/booleanCoercion1.ts (93 errors) ====
    declare let anyValue: any;
    declare let unknownValue: unknown;
    declare let undefinedValue: undefined;
    declare let nullValue: null;
    declare let stringValue: string;
    declare let stringLiteral: "123";
    declare let emptyStringLiteral: "";
    declare let numberValue: number;
    declare let numberLiteral: 123;
    declare let zeroNumberLiteral: 0;
    declare let booleanValue: boolean;
    declare let booleanLiteral: true;
    declare let falseBooleanLiteral: false;
    declare let bigintValue: bigint;
    declare let bigintLiteral: 123n;
    declare let zeroBigintLiteral: 0;
    
    enum Enum {
        EnumValue
    }
    
    
    interface Interface {
        foo: string
    }
    
    type Type = {
        foo: string
    }
    
    class Class {
        foo: string
    }
    
    declare function functionValue(): void;
    declare let interfaceLiteralValue: Interface
    declare let typeLiteralValue: Type;
    declare let symbolValue: Symbol
    declare let array: string[]
    declare let classValue: Class
    
    declare let unionTypeWork1: number | string
    declare let unionTypeWork2: number | undefined
    declare let unionTypeWork3: number | Type
    declare let intersectionTypeWork1: number & Type
    
    declare let unionTypeNotWork1: Type | Interface
    declare let intersectionTypeNotWork1: Type & Interface
    
    function testExoression<T>(typeParameter: T) {
        // if
        if (anyValue) { }
        if (unknownValue) { }
        if (undefinedValue) { }
        if (nullValue) { }
        if (stringValue) { }
        if (stringLiteral) { }
            ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        if (emptyStringLiteral) { }
        if (numberValue) { }
        if (numberLiteral) { }
            ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        if (zeroNumberLiteral) { }
        if (booleanValue) { }
        if (booleanLiteral) { }
            ~~~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
        if (falseBooleanLiteral) { }
        if (bigintValue) { }
        if (bigintLiteral) { }
            ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        if (zeroBigintLiteral) { }
        if (typeParameter) { }
        if (Enum.EnumValue) { }
        if (unionTypeWork1) { }
        if (unionTypeWork2) { }
        if (unionTypeWork3) { }
        if (intersectionTypeWork1) { }
    
        if (functionValue) { }
            ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        if (interfaceLiteralValue) { }
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        if (typeLiteralValue) { }
            ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        if (symbolValue) { }
            ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        if (array) { }
            ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        if (classValue) { }
            ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        if (unionTypeNotWork1) { }
            ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        if (intersectionTypeNotWork1) { }
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    
        // while
        while (anyValue) { }
        while (unknownValue) { }
        while (undefinedValue) { }
        while (nullValue) { }
        while (stringValue) { }
        while (stringLiteral) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        while (emptyStringLiteral) { }
        while (numberValue) { }
        while (numberLiteral) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        while (zeroNumberLiteral) { }
        while (booleanValue) { }
        while (booleanLiteral) { }
        while (falseBooleanLiteral) { }
        while (bigintValue) { }
        while (bigintLiteral) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        while (zeroBigintLiteral) { }
        while (typeParameter) { }
        while (Enum.EnumValue) { }
        while (unionTypeWork1) { }
        while (unionTypeWork2) { }
        while (unionTypeWork3) { }
        while (intersectionTypeWork1) { }
    
        while (functionValue) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        while (interfaceLiteralValue) { }
               ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        while (typeLiteralValue) { }
               ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        while (symbolValue) { }
               ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        while (array) { }
               ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        while (classValue) { }
               ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        while (unionTypeNotWork1) { }
               ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        while (intersectionTypeNotWork1) { }
               ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    
        // do while
        do { } while (anyValue)
        do { } while (unknownValue)
        do { } while (undefinedValue)
        do { } while (nullValue)
        do { } while (stringValue)
        do { } while (stringLiteral)
                      ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        do { } while (emptyStringLiteral)
        do { } while (numberValue)
        do { } while (numberLiteral)
                      ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        do { } while (zeroNumberLiteral)
        do { } while (booleanValue)
        do { } while (booleanLiteral)
        do { } while (falseBooleanLiteral)
        do { } while (bigintValue)
        do { } while (bigintLiteral)
                      ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        do { } while (zeroBigintLiteral)
        do { } while (typeParameter)
        do { } while (Enum.EnumValue)
        do {} while (unionTypeWork1)
        do {} while (unionTypeWork2)
        do {} while (unionTypeWork3)
        do {} while (intersectionTypeWork1)
    
        do { } while (functionValue)
                      ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        do {} while (interfaceLiteralValue)
                     ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        do {} while (typeLiteralValue)
                     ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        do {} while (symbolValue)
                     ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        do {} while (array)
                     ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        do {} while (classValue)
                     ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        do {} while (unionTypeNotWork1)
                     ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        do {} while (intersectionTypeNotWork1)
                     ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    }
    
    function middleExpression<T>(typeParameter: T) {
        // for
        for (; anyValue;) { }
        for (; unknownValue;) { }
        for (; undefinedValue;) { }
        for (; nullValue;) { }
        for (; stringValue;) { }
        for (; stringLiteral;) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        for (; emptyStringLiteral;) { }
        for (; numberValue;) { }
        for (; numberLiteral;) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        for (; zeroNumberLiteral;) { }
        for (; booleanValue;) { }
        for (; booleanLiteral;) { }
        for (; falseBooleanLiteral;) { }
        for (; bigintValue;) { }
        for (; bigintLiteral;) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        for (; zeroBigintLiteral;) { }
        for (; typeParameter;) { }
        for (; Enum.EnumValue;) { }
        for (;unionTypeWork1;) { }
        for (;unionTypeWork2;) { }
        for (;unionTypeWork3;) { }
        for (;intersectionTypeWork1;) { }
    
        for (; functionValue;) { }
               ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        for (;interfaceLiteralValue;) { }
              ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        for (;typeLiteralValue;) { }
              ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        for (;symbolValue;) { }
              ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        for (;array;) { }
              ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        for (;classValue;) { }
              ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        for (;unionTypeNotWork1;) { }
              ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        for (;intersectionTypeNotWork1;) { }
              ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    }
    
    function firstOperand<T>(typeParameter: T) {
        // conditional
        anyValue ? 1 : 2;
        unknownValue ? 1 : 2;
        undefinedValue ? 1 : 2;
        nullValue ? 1 : 2;
        stringValue ? 1 : 2;
        stringLiteral ? 1 : 2;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        emptyStringLiteral ? 1 : 2;
        numberValue ? 1 : 2;
        numberLiteral ? 1 : 2;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        zeroNumberLiteral ? 1 : 2;
        booleanValue ? 1 : 2;
        booleanLiteral ? 1 : 2;
        ~~~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
        falseBooleanLiteral ? 1 : 2;
        bigintValue ? 1 : 2;
        bigintLiteral ? 1 : 2;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        zeroBigintLiteral ? 1 : 2;
        typeParameter ? 1 : 2;
        Enum.EnumValue ? 1 : 2;
        unionTypeWork1 ? 1 : 2
        unionTypeWork2 ? 1 : 2
        unionTypeWork3 ? 1 : 2
        intersectionTypeWork1 ? 1 : 2
    
        functionValue ? 1 : 2;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        interfaceLiteralValue ? 1 : 2;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        typeLiteralValue ? 1 : 2;
        ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        symbolValue ? 1 : 2;
        ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        array ? 1 : 2;
        ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        classValue ? 1 : 2;
        ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        unionTypeNotWork1 ? 1 : 2;
        ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        intersectionTypeNotWork1 ? 1 : 2;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    
        // and
        anyValue && 1;
        unknownValue && 1;
        undefinedValue && 1;
        nullValue && 1;
        stringValue && 1;
        stringLiteral && 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        emptyStringLiteral && 1;
        numberValue && 1;
        numberLiteral && 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        zeroNumberLiteral && 1;
        booleanValue && 1;
        booleanLiteral && 1;
        ~~~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
        falseBooleanLiteral && 1;
        bigintValue && 1;
        bigintLiteral && 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        zeroBigintLiteral && 1;
        typeParameter && 1;
        Enum.EnumValue && 1;
        unionTypeWork1 && 1;
        unionTypeWork2 && 1;
        unionTypeWork3 && 1;
        intersectionTypeWork1 && 1;
    
        functionValue && 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        interfaceLiteralValue && 1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        typeLiteralValue && 1;
        ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        symbolValue && 1;
        ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        array && 1;
        ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        classValue && 1;
        ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        unionTypeNotWork1 && 1;
        ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        intersectionTypeNotWork1 && 1;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    
        // or
        anyValue || 1;
        unknownValue || 1;
        undefinedValue || 1;
        nullValue || 1;
        stringValue || 1;
        stringLiteral || 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        emptyStringLiteral || 1;
        numberValue || 1;
        numberLiteral || 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        zeroNumberLiteral || 1;
        booleanValue || 1;
        booleanLiteral || 1;
        ~~~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
        falseBooleanLiteral || 1;
        bigintValue || 1;
        bigintLiteral || 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        zeroBigintLiteral || 1;
        typeParameter || 1;
        Enum.EnumValue || 1;
        unionTypeWork1 || 1;
        unionTypeWork2 || 1;
        unionTypeWork3 || 1;
        intersectionTypeWork1 || 1;
    
        functionValue || 1;
        ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        interfaceLiteralValue || 1;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        typeLiteralValue || 1;
        ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        symbolValue || 1;
        ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        array || 1;
        ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        classValue || 1;
        ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        unionTypeNotWork1 || 1;
        ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        intersectionTypeNotWork1 || 1;
        ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    }
    
    function notOperand<T>(typeParameter: T) {
        // not
        !anyValue;
        !unknownValue;
        !undefinedValue;
        !nullValue;
        !stringValue;
        !stringLiteral;
         ~~~~~~~~~~~~~
!!! error TS4111: The type '"123"' is disallowed in truthiness position
        !emptyStringLiteral;
        !numberValue;
        !numberLiteral;
         ~~~~~~~~~~~~~
!!! error TS4111: The type '123' is disallowed in truthiness position
        !zeroNumberLiteral;
        !booleanValue;
        !booleanLiteral;
         ~~~~~~~~~~~~~~
!!! error TS4111: The type 'true' is disallowed in truthiness position
        !falseBooleanLiteral;
        !bigintValue;
        !bigintLiteral;
         ~~~~~~~~~~~~~
!!! error TS4111: The type '123n' is disallowed in truthiness position
        !zeroBigintLiteral;
        !typeParameter;
        !Enum.EnumValue;
        !unionTypeWork1;
        !unionTypeWork2;
        !unionTypeWork3;
        !intersectionTypeWork1;
    
        !functionValue;
         ~~~~~~~~~~~~~
!!! error TS4111: The type '() => void' is disallowed in truthiness position
        !interfaceLiteralValue;
         ~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface' is disallowed in truthiness position
        !typeLiteralValue;
         ~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type' is disallowed in truthiness position
        !symbolValue;
         ~~~~~~~~~~~
!!! error TS4111: The type 'Symbol' is disallowed in truthiness position
        !array;
         ~~~~~
!!! error TS4111: The type 'string[]' is disallowed in truthiness position
        !classValue;
         ~~~~~~~~~~
!!! error TS4111: The type 'Class' is disallowed in truthiness position
        !unionTypeNotWork1;
         ~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Interface | Type' is disallowed in truthiness position
        !intersectionTypeNotWork1;
         ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4111: The type 'Type & Interface' is disallowed in truthiness position
    }
    
    declare const guard: number
    function questionOrAssignment<T>(typeParameter: T) {
        // question
        anyValue ?? 1;
        unknownValue ?? 1;
        undefinedValue ?? 1;
        nullValue ?? 1;
        stringValue ?? 1;
        stringLiteral ?? 1;
        emptyStringLiteral ?? 1;
        numberValue ?? 1;
        numberLiteral ?? 1;
        zeroNumberLiteral ?? 1;
        booleanValue ?? 1;
        booleanLiteral ?? 1;
        falseBooleanLiteral ?? 1;
        bigintValue ?? 1;
        bigintLiteral ?? 1;
        zeroBigintLiteral ?? 1;
        typeParameter ?? 1;
        Enum.EnumValue ?? 1;
        unionTypeWork1 ?? 1;
        unionTypeWork2 ?? 1;
        unionTypeWork3 ?? 1;
        intersectionTypeWork1 ?? 1;
        functionValue ?? 1;
        interfaceLiteralValue ?? 1;
        typeLiteralValue ?? 1;
        symbolValue ?? 1;
        array ?? 1;
        classValue ?? 1;
        unionTypeNotWork1 ?? 1;
        intersectionTypeNotWork1 ?? 1;
    
        // &&=
        if (guard === 1) {
            anyValue &&= 1;
            unknownValue &&= 1;
            undefinedValue &&= undefined;
            nullValue &&= null;
            stringValue &&= "";
            stringLiteral &&= "123";
            emptyStringLiteral &&= "";
            numberValue &&= 1;
            numberLiteral &&= 123;
            zeroNumberLiteral &&= 0;
            booleanValue &&= true;
            booleanLiteral &&= true;
            falseBooleanLiteral &&= false;
            bigintValue &&= 1n;
            bigintLiteral &&= 123n;
            zeroBigintLiteral &&= 0;
            typeParameter &&= {} as any;
            unionTypeWork1 &&= 1;
            unionTypeWork2 &&= 1;
            unionTypeWork3 &&= 1;
            intersectionTypeWork1 &&= 1 as any;
            interfaceLiteralValue &&= { foo: '' };
            typeLiteralValue &&= { foo: '' };;
            symbolValue &&= Symbol("");
            array &&= [];
            unionTypeNotWork1 &&= { foo: '' };;
            intersectionTypeNotWork1 &&= { foo: '' };;
        }
    
        // ||=
        if (guard === 1) {
            anyValue ||= 1;
            unknownValue ||= 1;
            undefinedValue ||= undefined;
            nullValue ||= null;
            stringValue ||= "";
            stringLiteral ||= "123";
            emptyStringLiteral ||= "";
            numberValue ||= 1;
            numberLiteral ||= 123;
            zeroNumberLiteral ||= 0;
            booleanValue ||= true;
            booleanLiteral ||= true;
            falseBooleanLiteral ||= false;
            bigintValue ||= 1n;
            bigintLiteral ||= 123n;
            zeroBigintLiteral ||= 0;
            typeParameter ||= {} as any;
            unionTypeWork1 ||= 1;
            unionTypeWork2 ||= 1;
            unionTypeWork3 ||= 1;
            intersectionTypeWork1 ||= 1 as any;
            interfaceLiteralValue ||= { foo: '' };
            typeLiteralValue ||= { foo: '' };;
            symbolValue ||= Symbol("");
            array ||= [];
            unionTypeNotWork1 ||= { foo: '' };;
            intersectionTypeNotWork1 ||= { foo: '' };;
        }
    
        // ??=
        if (guard === 1) {
            anyValue ??= 1;
            unknownValue ??= 1;
            undefinedValue ??= undefined;
            nullValue ??= null;
            stringValue ??= "";
            stringLiteral ??= "123";
            emptyStringLiteral ??= "";
            numberValue ??= 1;
            numberLiteral ??= 123;
            zeroNumberLiteral ??= 0;
            booleanValue ??= true;
            booleanLiteral ??= true;
            falseBooleanLiteral ??= false;
            bigintValue ??= 1n;
            bigintLiteral ??= 123n;
            zeroBigintLiteral ??= 0;
            typeParameter ??= {} as any;
            unionTypeWork1 ??= 1;
            unionTypeWork2 ??= 1;
            unionTypeWork3 ??= 1;
            intersectionTypeWork1 ??= 1 as any;
            interfaceLiteralValue ??= { foo: '' };
            typeLiteralValue ??= { foo: '' };;
            symbolValue ??= Symbol("");
            array ??= [];
            unionTypeNotWork1 ??= { foo: '' };;
            intersectionTypeNotWork1 ??= { foo: '' };;
        }
    }
    